project: fix r-stretch images sitting beside inline-block lists

--- a/_extensions/ochre/usyd.scss
+++ b/_extensions/ochre/usyd.scss
@@ -307,6 +307,12 @@ $callout-color-important: $brand-heritagerose;
     }
 }
 
+// Fix r-stretch images sitting beside inline-block lists
+.reveal section > img.r-stretch,
+.reveal section > img.stretch {
+    display: block;
+}
+
 /* Utilities */
 .brand-ochre {
     color: $brand-ochre;
